Update:Gitignore test

--- a/mern-workshop/client/.env
+++ b/mern-workshop/client/.env
@@ -1,3 +1,4 @@
 # REQEST URL API เก็บไว้ไม่ต้องเขียน REQEST บ่อยๆ ยาว
 # การสร้างตัวแปรในฝั่ง react ต้องมีคำนำหน้าเป็นในส่วนหน้าคือมี REACT_APP_ชื่อเราสร้างได้เต็มที่
 REACT_APP_API = http://localhost:5500/api
+#ignore what
