--- a/mern-workshop/client/.gitignore
+++ b/mern-workshop/client/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.env
+
 # dependencies
 /node_modules
+/.env
 /.pnp
 .pnp.js
 
@@ -18,6 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
 
 npm-debug.log*
 yarn-debug.log*
